2014-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* vc.mak, wcc.mif: Only generate English manuals. Target clean
	  does not delete the manuals, new target maintainer-clean does.

2014-03-23 Jakub Bogusz <qboosh@pld-linux.org>
	* man/pl/dos2unix.po: New Polish translation of the manual.

2014-03-23 Benno Schulenberg <benno@vertaalt.nl>
	* man/nl/dos2unix.po: Update Dutch manual.

2014-03-22 Balázs Úr <urbalazs@gmail.com>
	* po/hu.po: New Hungarian translation of UI messages.

2014-03-21 Erwin Waterlander <waterlan@xs4all.nl>
	* common.c: Windows version of function symbolic_link().
	  Now Windows version also skips symbolic links by default.
	* man/man1/dos2unix.pod: Update wrt Windows symbolic links,
	  and some minor updates.
	* Makefile: Fix some dependencies for man page creation.

2014-03-18 Rafael Ferreira <rafael.f.f1@gmail.com>
	* man/pt_BR/man1/dos2unix.po: New Brazilian Portuguese
	  translation of the manual.

2014-03-18 Frédéric Marchal <fmarchal@perso.be>
	* man/fr/man1/dos2unix.po: New French translation of the manual.

2014-03-16 Yuri Chornoivan <yurchor@ukr.net>
	* man/uk/man1/dos2unix.po: New Ukrainian translation of the manual.

2014-03-16 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: New target 'getpoman' to get .po files for the manuals
	  from the Translation Project.

2014-03-15 Mario Blättermann <mario.blaettermann@gmail.com>
	* man/de/man1/dos2unix.po: New German translation of the
	  manual.

2014-03-14 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Generate pod files from gettext
	  po files with po4a, for easier translation. Thanks to
	  Mario Blätterman.
	  See also http://po4a.alioth.debian.org/
	* man/nl/man1/dos2unix.po, man/es/man/dos2unix.po:
	  New po files, created from original pod.
	  Thanks to Mario Blätterman.
	* man/nl/man1/dos2unix.pod, man/es/man/dos2unix.pod:
	  Deleted. These are generated now.
	* Makefile: Update for manual generation from .po files.