@@ -1,3 +1,7 @@
+2014-04-08 Erwin Waterlander <waterlan@xs4all.nl>
+	* Makefile: Fix for GNU make < 3.82. For rules with multiple
+	  patterns, put rule with shortest stem first.
+
 2014-04-04 Erwin Waterlander <waterlan@xs4all.nl>
 	* vc.mak, wcc.mif: Only generate English manuals. Target clean
 	  does not delete the manuals, new target maintainer-clean does.
